--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-numpy~=1.24.2
-scipy~=1.10.1
-pandas~=1.5.3
-scikit-learn~=1.2.1
-matplotlib>=2.1.2
-PyWavelets
-panel~=0.14.3
-bokeh~=2.4.3
+bokeh==2.4.3
+matplotlib==3.7.1
+numpy==1.24.2
+pandas==1.5.3
+panel==0.14.4
+PyWavelets==1.4.1
+scikit-learn==1.2.2
+scipy==1.10.1
+pyinstaller=5.10.1
