--- a/config.ini
+++ b/config.ini
@@ -3,3 +3,16 @@
 ACC=1
 EDA=1
 HR=1
+
+[PARAMETERS PEAKS EDA]
+#offset:      the number of rising samples and falling samples after a peak needed to be counted as a peak The number of
+#             seconds for which the derivative must be positive before a peak and the number of seconds for which
+#             the derivative must be negative after a peak.
+#start_WT:    maximum number of seconds before the apex of a peak that is the "start" of the peak
+#end_WT:      maximum number of seconds after the apex of a peak that is the "rec.t/2" of the peak, 50% of amp
+#thresh:       the minimum uS change required to register as a peak, defaults as 0 (i.e. all peaks count)
+OFFSET=1
+THRESH=0.2
+START_WT=4
+END_WT=4
+
